--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,7 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="/blabla">Blabla</a></li>
 			      <li><a href="/something">Something</a></li>
-			      <li><a href="/contacts">Contacts</a></li>
+			      <li><a href="/contacts">О блоге</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
