--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sinatra + Twitter Bootstrap</title>
+		<title>This is Troll Blog</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,13 +25,13 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">My Website</a>
+			    <a class="navbar-brand" href="/">Заглавая страница.</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/blabla">Blabla</a></li>
-			      <li><a href="/something">Something</a></li>
-			      <li><a href="/contacts">О блоге</a></li>
+			      <li><a href="/feedback">Отзывы.</a></li>
+			      <li><a href="/posts">Создать новый пост.</a></li>
+			      <li><a href="/contacts">О блоге.</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
