Add feedback submit

--- a/views/feedback.erb
+++ b/views/feedback.erb
@@ -1,5 +1,8 @@
-<h2>Отзывы.</h2>
+<h2>Написать новый отзыв.</h2>
 <p>
-
-
+  <form action="/new" method="POST" role="form">
+    <textarea name="content" class="form-control" rows="6" placeholder="Feedback here." style="width: 400px"></textarea>
+    <br />
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </p>
